# Cranberries

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh
.circleci/: config.yml
VisualStudio/: CranberriesLibrary.sln
VisualStudio/CommonLibTest/: CommonLibTest-DESKTOP-Q6L9QDR.vcxproj  CommonLibTest.vcxproj  CommonLibTest.vcxproj.filters  common_lib_test.cpp  stdafx.cpp
VisualStudio/CranberriesLibrary/: CranberriesLibrary-DESKTOP-Q6L9QDR.cpp  CranberriesLibrary-DESKTOP-Q6L9QDR.vcxproj  CranberriesLibrary.cpp  CranberriesLibrary.vcxproj  CranberriesLibrary.vcxproj.filters  ReadMe.txt  packages.config  stdafx.cpp  stdafx.h
VisualStudio/Debug/: vc141.idb
VisualStudio/DualNumberTest/: DualNumberTest.vcxproj  DualNumberTest.vcxproj.filters  dual_number_test.cpp  stdafx.cpp
VisualStudio/IntervalTest/: IntervalTest-DESKTOP-Q6L9QDR.vcxproj  IntervalTest.vcxproj  IntervalTest.vcxproj.filters  interval_test.cpp  stdafx.cpp
VisualStudio/Release/: UnitTestforCommonLib.exp  UnitTestforCommonLib.iobj  UnitTestforCommonLib.ipdb  UnitTestforDualNumber.exp  UnitTestforDualNumber.iobj  UnitTestforDualNumber.ipdb  UnitTestforFuncUtil.exp  UnitTestforFuncUtil.iobj  UnitTestforFuncUtil.ipdb  UnitTestforInterval.exp  UnitTestforInterval.iobj  UnitTestforInterval.ipdb  UnitTestforRKF45.exp  UnitTestforRKF45.iobj  UnitTestforRKF45.ipdb  UnitTestforStopwatch.exp  UnitTestforStopwatch.iobj  UnitTestforStopwatch.ipdb  UnitTestforStream.exp
VisualStudio/StreamTest/: StreamTest.vcxproj  StreamTest.vcxproj.filters  stdafx.cpp  stdafx.h  stream_test.cpp
VisualStudio/UnitTestforAlgorithm/: UnitTestforAlgorithm.vcxproj  UnitTestforAlgorithm.vcxproj.filters  algorithm_test.cpp  stdafx.cpp  stdafx.h
VisualStudio/UnitTestforDetectionToolkit/: UnitTestforDetectionToolkit.vcxproj  UnitTestforDetectionToolkit.vcxproj.filters  detection_toolkit_test.cpp  stdafx.cpp
VisualStudio/UnitTestforFuncUtil/: UnitTestforFuncUtil.vcxproj  UnitTestforFuncUtil.vcxproj.filters  func_util_test.cpp  stdafx.cpp
VisualStudio/UnitTestforOptional/: UnitTestforOptional.vcxproj  UnitTestforOptional.vcxproj.filters  optional_unittest.cpp  stdafx.cpp
VisualStudio/UnitTestforRKF45/: UnitTestforRKF45.vcxproj  rkf45_test.cpp  (+2 more)
cranberries/: algorithm.hpp  array_vectorized_utility.hpp  detection_toolkit.hpp  dual_number.hpp  exception.hpp  expected.hpp  expression.hpp  func_util.hpp  integers.hpp  interpolation.hpp  interval.hpp  math.hpp  meta_bind.hpp  optinal.hpp  optional.hpp  pack_operations-DESKTOP-Q6L9QDR.hpp  pack_operations.hpp  pack_traits.hpp  randomize.hpp  rkf45.hpp  singleton.hpp  span.hpp  stopwatch.hpp  stream.hpp  time_elapsed.hpp  type_traits-DESKTOP-Q6L9QDR.hpp  type_traits.hpp  utility.hpp
except/: exception.hpp
experimental/: easy_test.cpp  exception.hpp  stream.hpp  stream_error.hpp
gtest/: Makefile
math/: dual_number.hpp  interval.hpp
test/: CMakeLists.txt  Makefile  dual_number_easy_test.cpp  stream_easy_test.cpp
test/algorithm/: CMakeLists.txt  test.cpp
test/detection_toolkit/: CMakeLists.txt  test.cpp
test/interval/: CMakeLists.txt  test.cpp
test/optional/: CMakeLists.txt  test.cpp
test/stopwatch/: CMakeLists.txt  test.cpp
test/traversal/: CMakeLists.txt  test.cpp
test/unit_test_framework/: CMakeLists.txt  test.cpp
time_elapsed/: time_elapsed.hpp
(+419 files in other folders)
